--- a/frontend/src/Admin/AdminDashboard.css
+++ b/frontend/src/Admin/AdminDashboard.css
@@ -86,7 +86,7 @@ div.content {
   height: 1000px;
 }
 
-@media screen and (max-width: 700px) {
+/* @media screen and (max-width: 700px) {
   .sidebar {
     width: 100%;
     height: auto;
@@ -98,14 +98,14 @@ div.content {
   div.content {
     margin-left: 0;
   }
-}
+} */
 
-@media screen and (max-width: 400px) {
+/* @media screen and (max-width: 450px) {
   .sidebar a {
     text-align: center;
     float: none;
   }
-}
+} */
 
 /* hello */
 
@@ -138,14 +138,14 @@ div.content {
   padding: 0px 10px;
 }
 
-@media screen and (max-height: 450px) {
+/* @media screen and (max-height: 450px) {
   .sidebar {
     padding-top: 15px;
   }
   .sidebar a {
     font-size: 18px;
   }
-}
+} */
 
 .sidebar {
   margin: 0;
@@ -180,7 +180,7 @@ div.content {
   height: 1000px;
 }
 
-@media screen and (max-width: 700px) {
+/* @media screen and (max-width: 700px) {
   .sidebar {
     width: 100%;
     height: auto;
@@ -192,9 +192,9 @@ div.content {
   div.content {
     margin-left: 0;
   }
-}
+} */
 
-@media screen and (max-width: 400px) {
+@media screen and (max-width: 500px) {
   .sidebar a {
     text-align: center;
     float: none;
