--- a/frontend/src/Sidebar.css
+++ b/frontend/src/Sidebar.css
@@ -5,13 +5,19 @@
   max-width: 295px;
   margin-bottom: 50px;
 }
-@media (max-width: 991px) {
+.sidebar > a {
+  color: #ffbb33;
+  /* display: flex;
+  justify-content: center; */
+}
+
+/* @media (max-width: 991px) {
   .sidebar-wrapper {
     width: 100%;
     max-width: 992px;
     margin-bottom: 0;
   }
-}
+} */
 .sidebar-wrapper > ul li {
   font-size: 1.8rem;
   font-weight: 500;
@@ -91,11 +97,14 @@ img {
   margin: auto;
 }
 
-@media only screen and (max-width: 700px) {
+/* @media only screen and (max-width: 700px) {
   img {
     border-radius: 50%;
-    /* height: auto; */
-    /* display: inline-block; */
     margin-top: 15px;
   }
+} */
+
+.sidebar > a {
+  /* background-color: #e9e7e7; */
+  border: 1px solid black;
 }
