--- a/frontend/src/Admin/AdminDashboard.css
+++ b/frontend/src/Admin/AdminDashboard.css
@@ -36,9 +36,6 @@ a {
   /* color: white; */
   text-decoration: none;
 }
-a:hover {
-  /* color: white; */
-}
 
 #r {
   background-color: red;
@@ -80,10 +77,15 @@ body {
   color: white;
 }
 
-div.content {
+/* div.content {
   margin-left: 200px;
   padding: 1px 16px;
   height: 1000px;
+} */
+@media screen and (max-width: 767px) {
+  div.content {
+    margin-left: 0px;
+  }
 }
 
 /* @media screen and (max-width: 700px) {
